fix: ensure "Delete" button remains visible on narrow screens
(cherry picked from commit 9c59f4a0820a8c3352b6f1b78d9c0c700e3228e7)

--- a/gravitee-apim-console-webui/src/management/api/documentation-v4/components/api-documentation-v4-pages-list/api-documentation-v4-pages-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/documentation-v4/components/api-documentation-v4-pages-list/api-documentation-v4-pages-list.component.scss
@@ -40,17 +40,25 @@
 
     &__actions {
       display: flex;
-      gap: 8px;
       flex: 1 0 auto;
+      justify-content: center;
     }
-    .mat-column-actions {
-      max-width: 232px;
+    &__actions__header {
+      text-align: center;
+    }
+    &__actions__cell {
+      text-align: center;
     }
   }
 }
 
+.mat-column-actions {
+  width: 0%;
+  min-width: 0;
+}
+
 .empty-icon-button {
-  min-width: 40px;
+  min-width: 36px;
 }
 
 .no-pointer {
